# primus-emp

./: .gitignore  .gitmodules  README.md  compile.sh  test.sh
.github/workflows/: x86.yml
docs/: INSTALL.md
emp-ot/: CMakeLists.txt
emp-ot/emp-ot/: co.h  cot.h  iknp.h  np.h
emp-ot/emp-ot/ferret/: base_cot.h  constants.h  ferret_cot.h  ferret_cot.hpp  lpn_f2.h  mpcot_reg.h  preot.h  spcot_recver.h  spcot_sender.h
emp-ot/test/: bench_lpn.cpp
emp-tool/: .gitignore  CMakeLists.txt
emp-tool/cmake/: emp-base.cmake
emp-tool/emp-tool/: emp-tool.cpp  emp-tool.h
emp-tool/emp-tool/circuits/: aes_128_ctr.h  bit.h  circuit_file.h  float32.h  integer.h  integer.hpp  sha3_256.h
emp-tool/emp-tool/io/: highspeed_net_io_channel.h  io_channel.h  mem_io_channel.h  net_io_channel.h
emp-tool/emp-tool/utils/: ThreadPool.h  __aesenc.cpp  __aesenc.h  __clmul.h  __ssewasm.h  _bsaes.c  _bsaes.h  _stable.c  _stable.h  aes.h  aes_opt.h  block.h  constants.h  f2k.h  function_wrapper.cpp  function_wrapper.h  group.h  group_openssl.h  hash.h  prg.h  prp.h  sse2neon.h  utils.h  utils.hpp  win_compat.h
emp-tool/test/: CMakeLists.txt  aes_128_ctr.cpp  aes_opt.cpp  bit.cpp  ecc.cpp  f2k.cpp  float.cpp  garble.cpp  gen_circuit.cpp  halfgate.cpp  hash.cpp  int.cpp  mitccrh.cpp  netio.cpp  netio2.cpp  prg.cpp  prp.cpp  sha3_256.cpp  to_bool.cpp  waesenc.cpp  wclmul.cpp  wnetio.cpp  wperf.cpp
emp-zk/: CMakeLists.txt
emp-zk/emp-zk/edabit/: edabits.h
emp-zk/emp-zk/emp-vole/: lpn.h  mpfss_reg.h  utility.h  vole_triple.h
emp-zk/emp-zk/emp-vole-f2k/: lpn_f2k.h  mpfss.h
emp-zk/emp-zk/emp-zk-arith/: emp-zk-arith.cpp  ostriple.h  polynomial.h  zk_fp_exec.h
emp-zk/emp-zk/emp-zk-bool/: bool_io.h  cheat_record.h  emp-zk-bool.cpp  emp-zk-bool.h  ostriple.h  ostriple.h.rej  polynomial.h  triple_auth.h  zk_prover.h  zk_verifier.h
emp-zk/emp-zk/extensions/ram-zk/: ostriple.h  poly_prdt.h  ro-zk-mem.h  zk-mem-ext.h  zk-mem.h
emp-zk/test/: CMakeLists.txt
scripts/: README.md  _config.sh  _run.sh  clean.sh  compile.sh  compile_wasm.sh  entry.js  run.sh  run_wasm.sh
